--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,8 +1,10 @@
-<h1 class="text-xl font-bold">
+<h1 class="mb-2 text-xl font-bold">
   Teams
 </h1>
 
-<%= link_to "Add a team", new_team_path, class: "hover:underline text-gray-600" %>
+<div class="mb-2">
+  <%= link_to "Add a team", new_team_path, class: "hover:underline text-gray-600" %>
+</div>
 
 <ul>
   <% @teams.order(name: :desc).each do |team| %>
