--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -1,4 +1,22 @@
-<div class="mb-2">
+<div class="mb-1">
+  <%= link_to team_path(@athlete.team) do %>
+    <div class="flex items-center space-x-1 text-gray-600 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
+      <div>
+        <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M10 19l-7-7m0 0l7-7m-7 7h18">
+          </path>
+        </svg>
+      </div>
+      <div>
+        Back to team
+      </div>
+    </div>
+  <% end %>
+</div>
+
+<div class="mb-3">
   <div class="text-2xl uppercase">
     <div class="font-light">
       <%= @athlete.first_name %>
@@ -9,7 +27,7 @@
   </div>
   <div class="flex space-x-1">
     <div>
-      <%= @athlete.team.name %>
+      <%= link_to @athlete.team.name, team_path(@athlete.team) %>
     </div>
     <div class="font-bold text-gray-500">
       &middot;
