--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,3 +1,21 @@
+<div class="mb-1">
+  <%= link_to teams_path do %>
+    <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
+      <div>
+        <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M10 19l-7-7m0 0l7-7m-7 7h18">
+          </path>
+        </svg>
+      </div>
+      <div>
+        Back to teams
+      </div>
+    </div>
+  <% end %>
+</div>
+
 <h1 class="mb-1 text-xl font-bold">
   <%= @team.name %>
 </h1>
@@ -7,7 +25,7 @@
     <%= link_to edit_team_path(@team) do %>
       <div class="flex items-center space-x-1 text-gray-600 hover:underline">
         <div>
-          <svg class="h-4" fill="none" stroke="currentColor"
+          <svg class="w-4" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
@@ -27,7 +45,7 @@
         } do %>
       <div class="flex items-center space-x-1 text-gray-600 hover:underline">
         <div>
-          <svg class="h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                   d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
@@ -46,7 +64,7 @@
   <%= link_to new_team_athlete_path(@team) do %>
   <div class="flex items-center space-x-1 text-gray-600 hover:underline">
     <div>
-      <svg class="h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+      <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg">
         <path stroke-linecap="round"
               stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
