--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -1,6 +1,6 @@
 <div class="mb-1">
   <%= link_to team_path(@athlete.team) do %>
-    <div class="flex items-center space-x-1 text-gray-600 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
+    <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
       <div>
         <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
             xmlns="http://www.w3.org/2000/svg">
@@ -44,10 +44,10 @@
   </div>
 </div>
 
-<div class="flex-col space-y-1">
+<div class="flex-col space-y-2">
   <div>
     <%= link_to edit_athlete_path(@athlete) do %>
-      <div class="flex items-center space-x-1 text-gray-600 hover:underline">
+      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
         <div>
           <svg class="h-4" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -67,7 +67,7 @@
           turbo_method: :delete,
           turbo_confirm: "Are you sure?"
         } do %>
-      <div class="flex items-center space-x-1 text-gray-600 hover:underline">
+      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
         <div>
           <svg class="h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg">
