--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -43,7 +43,7 @@
           turbo_method: :delete,
           turbo_confirm: "Are you sure?"
         } do %>
-      <div class="flex items-center space-x-1 text-gray-600 hover:underline">
+      <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
         <div>
           <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg">
@@ -60,9 +60,9 @@
   </div>
 </div>
 
-<div class="mt-2 mb-2">
+<div class="mt-4 mb-4">
   <%= link_to new_team_athlete_path(@team) do %>
-  <div class="flex items-center space-x-1 text-gray-600 hover:underline">
+  <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
     <div>
       <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg">
@@ -80,7 +80,7 @@
 
 <div class="table w-full">
   <div class="table-header-group">
-    <div class="table-row h-7">
+    <div class="table-row h-8">
       <div class="table-cell font-semibold text-left border-b">
         Last Name
       </div>
