--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -78,33 +78,39 @@
 <% end %>
 </div>
 
-<div class="table w-full">
-  <div class="table-header-group">
-    <div class="table-row h-8">
-      <div class="table-cell font-semibold text-left border-b">
-        Last Name
-      </div>
-      <div class="table-cell font-semibold text-left border-b">
-        First Name
-      </div>
-      <div class="table-cell font-semibold text-left border-b">
-        Position
-      </div>
-    </div>
-  </div>
-  <div class="table-row-group">
-    <% @team.athletes.order(last_name: :asc).each do |athlete| %>
-      <div class="table-row">
-        <div class="table-cell">
+<% if @team.athletes.any? %>
+  <table class="w-full table-auto">
+    <thead>
+      <tr>
+        <th class="pb-1.5 text-left border-b">
+          Last name
+        </th>
+        <th class="pb-1.5 text-left border-b">
+          First name
+        </th>
+        <th class="pb-1.5 text-left border-b">
+          Position
+        </th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @team.athletes.order(last_name: :asc).each_with_index do |athlete, index| %>
+      <tr>
+        <td class="<%= "pt-1.5" if index == 0 %>">
           <%= link_to athlete.last_name, athlete %>
-        </div>
-        <div class="table-cell">
+        </td>
+        <td class="<%= "pt-1.5" if index == 0 %>">
           <%= link_to athlete.first_name, athlete %>
-        </div>
-        <div class="table-cell">
+        </td>
+        <td class="<%= "pt-1.5" if index == 0 %>">
           <%= link_to athlete.position, athlete %>
-        </div>
-      </div>
-    <% end %>
+        </td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <div>
+    Players are listed here.
   </div>
-</div>
+<% end %>
