--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -1,16 +1,39 @@
-<h1 class="mb-2 text-xl font-bold">
+<h1 class="pb-2 mb-2 text-xl font-bold border-b">
   Teams
 </h1>
 
-<div class="mb-2">
-  <%= link_to "Add a team", new_team_path, class: "hover:underline text-gray-600" %>
+<div class="mt-4 mb-4">
+  <%= link_to new_team_path do %>
+  <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
+    <div>
+      <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+           xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round"
+              stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+        </path>
+      </svg>
+    </div>
+    <div>
+      Add a team
+    </div>
+  </div>
+<% end %>
+</div>
+
+<div class="pb-2 mb-2 font-bold border-b">
+  Existing teams
 </div>
 
 <% if @teams.any? %>
   <ul>
-    <% @teams.order(name: :desc).each do |team| %>
-      <li>
-        <%= link_to team.name, team %>
+    <% @teams.order(name: :asc).each do |team| %>
+      <li class="mb-1">
+        <%= link_to team do %>
+          <div class="flex items-center space-x-1">
+            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+            <span><%= team.name %></span>
+          </div>
+        <% end %>
       </li>
     <% end %>
   </ul>
@@ -18,6 +41,6 @@
   <div>
     Teams are listed here.
     Go ahead and
-    <%= link_to "create one", new_team_path, class: "hover:underline text-gray-500" %>.
+    <%= link_to "create one now", new_team_path, class: "hover:underline text-gray-600" %>.
   </div>
 <% end %>
