--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -29,8 +29,8 @@
     <% @teams.order(name: :asc).each do |team| %>
       <li class="mb-1">
         <%= link_to team do %>
-          <div class="flex items-center space-x-1">
-            <svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+          <div class="flex space-x-1 sm:items-center">
+            <svg class="w-4 h-4 mt-1 sm:mt-0" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
             <span><%= team.name %></span>
           </div>
         <% end %>
