Add system spec for each feature spec, remove feature specs

--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -97,7 +97,7 @@
           </svg>
         </div>
         <div>
-          Remove player
+          Delete player
         </div>
       </div>
     <% end %>
