--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -16,48 +16,16 @@
   <% end %>
 </div>
 
-<h1 class="mb-1 text-xl font-bold">
-  <%= @team.name %>
-</h1>
-
-<div class="flex pb-2 mb-2 space-x-3 border-b">
-  <div>
-    <%= link_to edit_team_path(@team) do %>
-      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
-        <div>
-          <svg class="w-4" fill="none" stroke="currentColor"
-            viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M15.232 5.232l3.536 3.536m-2.036-5.036a2.5 2.5 0 113.536 3.536L6.5 21.036H3v-3.572L16.732 3.732z">
-            </path>
-          </svg>
-        </div>
-        <div>
-          Edit team
-        </div>
-      </div>
-    <% end %>
-  </div>
-  <div>
-    <%= link_to team_path(@team), data: {
-          turbo_method: :delete,
-          turbo_confirm: "Are you sure?"
-        } do %>
-      <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
-        <div>
-          <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-              xmlns="http://www.w3.org/2000/svg">
-            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                  d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
-            </path>
-          </svg>
-        </div>
-        <div>
-          Delete team
-        </div>
-      </div>
-    <% end %>
-  </div>
+<div class="mb-2">
+  <%= render PageHeaderComponent.new do %>
+    <div class="mb-1">
+      <%= render PageTitleComponent.new(title: @team.name) %>
+    </div>
+    <div class="flex space-x-3">
+      <%= render EditLinkComponent.new(path: edit_team_path(@team), text: "team") %>
+      <%= render DeleteLinkComponent.new(path: team_path(@team), text: "team") %>
+    </div>
+  <% end %>
 </div>
 
 <div class="mt-4 mb-4">
