--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -1,23 +1,11 @@
-<div class="mb-1">
-  <%= link_to teams_path do %>
-    <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
-      <div>
-        <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M10 19l-7-7m0 0l7-7m-7 7h18">
-          </path>
-        </svg>
-      </div>
-      <div>
-        Back to teams
-      </div>
-    </div>
-  <% end %>
-</div>
-
 <div class="mb-2">
   <%= render PageHeaderComponent.new do %>
+    <div class="mb-1">
+    <%= render BackNavigationComponent.new(
+          path: teams_path,
+          text: "teams"
+    ) %>
+    </div>
     <div class="mb-1">
       <%= render PageTitleComponent.new(title: @team.name) %>
     </div>
@@ -30,20 +18,20 @@
 
 <div class="mt-4 mb-4">
   <%= link_to new_team_athlete_path(@team) do %>
-  <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
-    <div>
-      <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-           xmlns="http://www.w3.org/2000/svg">
-        <path stroke-linecap="round"
-              stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
-        </path>
-      </svg>
+    <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
+      <div>
+        <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+            xmlns="http://www.w3.org/2000/svg">
+          <path stroke-linecap="round"
+                stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+          </path>
+        </svg>
+      </div>
+      <div>
+        Add a player
+      </div>
     </div>
-    <div>
-      Add a player
-    </div>
-  </div>
-<% end %>
+  <% end %>
 </div>
 
 <% if @team.athletes.any? %>
