Change link components to use href argument in place of path, add AddLinkComponent and PageHeaderComponent unit tests

--- a/app/components/delete_link_component.html.erb
+++ b/app/components/delete_link_component.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= link_to @path, data: {
+  <%= link_to @href, data: {
         turbo_method: :delete,
         turbo_confirm: "Are you sure?"
       } do %>
