--- a/app/views/athletes/edit.html.erb
+++ b/app/views/athletes/edit.html.erb
@@ -2,7 +2,7 @@
   <%= render PageHeaderComponent.new do %>
     <div class="mb-1">
       <%= render BackNavigationComponent.new(
-        path: @athlete,
+        href: @athlete,
         text: "player details"
       ) %>
     </div>
