--- a/app/views/teams/index.html.erb
+++ b/app/views/teams/index.html.erb
@@ -5,7 +5,7 @@
 </div>
 
 <div class="mt-4 mb-4">
-  <%= render AddLinkComponent.new(path: new_team_path, text: "team") %>
+  <%= render AddLinkComponent.new(href: new_team_path, text: "team") %>
 </div>
 
 <div class="pb-2 mb-2 font-bold border-b">
