--- a/app/components/add_link_component.html.erb
+++ b/app/components/add_link_component.html.erb
@@ -1,4 +1,4 @@
-<%= link_to @path do %>
+<%= link_to @href do %>
   <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
     <div>
       <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
