--- a/app/components/edit_link_component.html.erb
+++ b/app/components/edit_link_component.html.erb
@@ -1,5 +1,5 @@
 <div>
-  <%= link_to @path do %>
+  <%= link_to @href do %>
     <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
       <div>
         <svg class="w-4" fill="none" stroke="currentColor"
