Refactor LinkComponent and all that inherit from it

--- a/app/components/add_link_component.html.erb
+++ b/app/components/add_link_component.html.erb
@@ -1,13 +1,15 @@
-<%= render LinkComponent.new(href: @href) do %>
-  <div class="flex items-center space-x-1">
-    <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-        xmlns="http://www.w3.org/2000/svg">
-      <path stroke-linecap="round"
-            stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
-      </path>
-    </svg>
-    <div>
-      Add a <%= @text %>
+<%= render LinkComponent.new do %>
+  <%= link_to @href do %>
+    <div class="flex items-center space-x-1">
+      <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round"
+              stroke-linejoin="round" stroke-width="2" d="M12 6v6m0 0v6m0-6h6m-6 0H6">
+        </path>
+      </svg>
+      <div>
+        Add a <%= @text %>
+      </div>
     </div>
-  </div>
+  <% end %>
 <% end %>
