--- a/app/components/delete_link_component.html.erb
+++ b/app/components/delete_link_component.html.erb
@@ -1,20 +1,18 @@
-<div>
+<%= render LinkComponent.new do %>
   <%= link_to @href, data: {
-        turbo_method: :delete,
-        turbo_confirm: "Are you sure?"
-      } do %>
-    <div class="flex items-center space-x-1 text-gray-600 duration-300 border-b border-white ransition max-w-fit hover:border-b hover:border-gray-400">
-      <div>
-        <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
-            xmlns="http://www.w3.org/2000/svg">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
-          </path>
-        </svg>
-      </div>
+      turbo_method: :delete,
+      turbo_confirm: "Are you sure?"
+  } do %>
+    <div class="flex items-center space-x-1">
+      <svg class="w-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
+          xmlns="http://www.w3.org/2000/svg">
+        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16">
+        </path>
+      </svg>
       <div>
         Delete <%= @text %>
       </div>
     </div>
   <% end %>
-</div>
+<% end %>
