--- a/app/views/athletes/show.html.erb
+++ b/app/views/athletes/show.html.erb
@@ -67,7 +67,7 @@
 <div class="flex-col space-y-2">
   <div class="max-w-fit">
     <%= link_to edit_athlete_path(@athlete) do %>
-      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
+      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white hover:border-b hover:border-gray-400">
         <div>
           <svg class="h-4" fill="none" stroke="currentColor"
             viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -87,7 +87,7 @@
           turbo_method: :delete,
           turbo_confirm: "Are you sure?"
         } do %>
-      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white max-w-fit hover:border-b hover:border-gray-400">
+      <div class="flex items-center space-x-1 text-gray-600 transition duration-300 border-b border-white hover:border-b hover:border-gray-400">
         <div>
           <svg class="h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"
               xmlns="http://www.w3.org/2000/svg">
