Add FormErrorsComponent instances to relevant forms and add associated spec

--- a/app/views/athletes/edit.html.erb
+++ b/app/views/athletes/edit.html.erb
@@ -11,6 +11,13 @@
 </div>
 
 <%= form_with model: @athlete, data: { turbo: false } do |f| %>
+  <% if @athlete.errors.any? %>
+    <%= render FormErrorsComponent.new(
+      resource: @athlete,
+      descriptor: "player"
+    ) %>
+  <% end %>
+
   <div class="mt-2">
     <div>
       <%= f.label :first_name %>
