--- a/app/views/athletes/new.html.erb
+++ b/app/views/athletes/new.html.erb
@@ -10,6 +10,12 @@
 </div>
 
 <%= form_with model: [@team, @athlete], data: { turbo: false } do |f| %>
+  <% if @athlete.errors.any? %>
+    <%= render FormErrorsComponent.new(
+      resource: @athlete,
+      descriptor: "player"
+    ) %>
+  <% end %>
   <div class="mt-2">
     <div>
       <%= f.label :first_name %>
