--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -11,6 +11,10 @@
 </div>
 
 <%= form_with model: @team, data: { turbo: false } do |f| %>
+  <% if @team.errors.any? %>
+    <%= render FormErrorsComponent.new(resource: @team, descriptor: "team") %>
+  <% end %>
+
   <div class="mt-2">
     <div><%= f.label :name %></div>
     <div><%= f.text_field :name %></div>
