--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -9,17 +9,7 @@
 
 <%= form_with model: @team, data: { turbo: false } do |f| %>
   <% if @team.errors.any? %>
-    <div>
-      <%= pluralize(@team.errors.count, "error") %>
-      prevented this team from being saved:
-    </div>
-    <ul>
-      <% @team.errors.full_messages.each do |msg| %>
-        <li>
-          <%= msg %>
-        </li>
-      <% end %>
-    </ul>
+    <%= render FormErrorsComponent.new(resource: @team, descriptor: "team") %>
   <% end %>
 
   <div class="mt-2">
